--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         .glass-panel { background: rgba(31, 41, 55, 0.7); border: 1px solid rgba(255, 255, 255, 0.08); backdrop-filter: blur(12px); -webkit-backdrop-filter: blur(12px); }
         
         /* Transitions */
-        .view-section { display: none; padding-bottom: 80px; }
+        .view-section { display: none; padding-bottom: 90px; }
         .view-section.active { display: block; animation: fadeIn 0.3s ease-out; }
         @keyframes fadeIn { from { opacity: 0; transform: translateY(5px); } to { opacity: 1; transform: translateY(0); } }
 
@@ -87,6 +87,7 @@
         <!-- DASHBOARD VIEW -->
         <div id="view-dashboard" class="view-section flex-1 overflow-y-auto p-4 md:p-8">
             <div class="max-w-5xl mx-auto space-y-6">
+                <!-- NET WORTH HEADER -->
                 <div class="flex flex-col md:flex-row md:items-end justify-between gap-4">
                     <div>
                         <h2 class="text-3xl font-bold text-white">Overview</h2>
@@ -98,11 +99,42 @@
                     </div>
                 </div>
 
+                <!-- MAIN NET WORTH CHART -->
                 <div class="glass-panel rounded-2xl p-1">
                     <div class="p-5 pb-0 flex justify-between items-center"><h3 class="font-medium text-gray-200">History</h3></div>
                     <div class="chart-wrapper p-4"><canvas id="mainChart"></canvas></div>
                 </div>
 
+                <!-- NEW CASH FLOW SECTION -->
+                <div class="glass-panel rounded-2xl p-6">
+                    <div class="flex justify-between items-center mb-6">
+                        <h3 class="font-medium text-white text-lg">Cash Flow</h3>
+                        <span class="text-xs text-gray-500 bg-white/5 px-2 py-1 rounded">Last 6 Months</span>
+                    </div>
+
+                    <!-- Cash Flow Summary Stats -->
+                    <div class="grid grid-cols-3 gap-4 mb-6 pb-6 border-b border-white/5">
+                        <div class="text-center">
+                            <div class="text-xs text-gray-400 mb-1">Total Income</div>
+                            <div class="text-lg font-bold text-emerald-400" id="cf-in">₹0</div>
+                        </div>
+                        <div class="text-center border-l border-white/5">
+                            <div class="text-xs text-gray-400 mb-1">Total Expenses</div>
+                            <div class="text-lg font-bold text-rose-400" id="cf-out">₹0</div>
+                        </div>
+                        <div class="text-center border-l border-white/5">
+                            <div class="text-xs text-gray-400 mb-1">Net Savings</div>
+                            <div class="text-lg font-bold text-blue-400" id="cf-net">₹0</div>
+                        </div>
+                    </div>
+
+                    <!-- Cash Flow Bar Chart -->
+                    <div class="chart-wrapper" style="height: 200px;">
+                        <canvas id="cashFlowChart"></canvas>
+                    </div>
+                </div>
+
+                <!-- ASSETS / DEBTS GRID -->
                 <div class="grid grid-cols-2 gap-4">
                     <div class="glass-panel p-5 rounded-2xl">
                         <div class="text-xs text-gray-400">Total Assets</div>
@@ -194,7 +226,7 @@
         import { getFirestore, doc, setDoc, onSnapshot } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
         // ==========================================
-        // YOUR CONFIGURATION KEYS
+        // CONFIGURATION (EMBEDDED)
         // ==========================================
         const firebaseConfig = {
             apiKey: "AIzaSyDVCcds_UxopRp6Vw3vL0YYzr9IjIjR6Lc",
@@ -214,6 +246,7 @@
         let currentUser = null;
         let state = { accounts: [], transactions: [], history: [0] };
         let chartInst = null;
+        let cfChartInst = null; // Cash Flow Chart
 
         // UI Refs
         const els = {
@@ -301,6 +334,7 @@
         }).format(n);
 
         function render() {
+            // 1. Net Worth Calcs
             let assets = 0, debts = 0;
             state.accounts.forEach(a => {
                 if(['cash','investment','property'].includes(a.type)) assets += a.balance;
@@ -312,7 +346,7 @@
             els.as.innerText = money(assets);
             els.db.innerText = money(debts);
 
-            // Chart
+            // 2. Main History Chart
             if(state.history[state.history.length-1] !== nw) {
                 state.history.push(nw);
                 if(state.history.length > 12) state.history.shift();
@@ -328,7 +362,62 @@
                 options: { responsive: true, maintainAspectRatio: false, plugins: { legend: { display: false } }, scales: { x: { display: false }, y: { display: false } } }
             });
 
-            // Accounts
+            // 3. CASH FLOW CALCULATIONS
+            const monthNames = ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"];
+            const currentMonth = new Date().getMonth();
+            const monthlyStats = Array(6).fill(0).map((_, i) => {
+                const d = new Date();
+                d.setMonth(currentMonth - 5 + i);
+                return { month: monthNames[d.getMonth()], income: 0, expense: 0 };
+            });
+
+            let totalIn = 0, totalOut = 0;
+
+            state.transactions.forEach(tx => {
+                const txDate = new Date(tx.date);
+                // Check if in last 6 months
+                const diff = (new Date().getFullYear() - txDate.getFullYear()) * 12 + (new Date().getMonth() - txDate.getMonth());
+                if(diff >= 0 && diff < 6) {
+                    const idx = 5 - diff; // 5 is current month
+                    if(tx.type === 'income') {
+                        monthlyStats[idx].income += tx.amount;
+                        totalIn += tx.amount;
+                    } else {
+                        monthlyStats[idx].expense += tx.amount;
+                        totalOut += tx.amount;
+                    }
+                }
+            });
+
+            // Update Cash Flow UI
+            document.getElementById('cf-in').innerText = money(totalIn);
+            document.getElementById('cf-out').innerText = money(totalOut);
+            document.getElementById('cf-net').innerText = money(totalIn - totalOut);
+
+            // Render Cash Flow Chart
+            const cfCtx = document.getElementById('cashFlowChart').getContext('2d');
+            if(cfChartInst) cfChartInst.destroy();
+            cfChartInst = new Chart(cfCtx, {
+                type: 'bar',
+                data: {
+                    labels: monthlyStats.map(m => m.month),
+                    datasets: [
+                        { label: 'Income', data: monthlyStats.map(m => m.income), backgroundColor: '#10B981', borderRadius: 4 },
+                        { label: 'Expense', data: monthlyStats.map(m => m.expense), backgroundColor: '#E11D48', borderRadius: 4 }
+                    ]
+                },
+                options: {
+                    responsive: true,
+                    maintainAspectRatio: false,
+                    plugins: { legend: { display: false } },
+                    scales: { 
+                        x: { grid: { display: false }, ticks: { color: '#9CA3AF' } }, 
+                        y: { display: false } 
+                    }
+                }
+            });
+
+            // 4. Accounts List
             const ac = document.getElementById('accounts-container'); ac.innerHTML = '';
             const groups = { 'Liquidity': 'cash', 'Investments': 'investment', 'Properties': 'property', 'Debts': ['credit','loan'] };
             for(const [name, types] of Object.entries(groups)) {
@@ -342,7 +431,7 @@
                 }
             }
 
-            // Tx
+            // 5. Tx List
             const tc = document.getElementById('full-tx-list'); tc.innerHTML = '';
             const term = document.getElementById('tx-search').value.toLowerCase();
             state.transactions.filter(t=>t.desc.toLowerCase().includes(term)).forEach(t => {
